# fastapi-framework

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  coverage.sh  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test.env  test.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: documentation_request.md  feature_request.md
.github/workflows/: codestyle.yaml  deploy_docs.yaml  deploy_pypi.yaml  tests.yaml
config/: index.html
database/: index.html
database/example/: index.html
database/insert_delete_modify/: index.html
database/models/: index.html
database/query/: index.html
docs/: environment.md  index.md
docs/config/: index.md
docs/database/: example.md  index.md  insert_delete_modify.md  models.md  query.md
docs/in_memory_backends/api/: delete_exists.md  expires.md  increase_decrease.md  index.md  set_get.md  sets.md
docs/in_memory_backends/in_memory_backend/: index.md
docs/in_memory_backends/redis/: connection.md  index.md
docs/jwt/: example.md  index.md  jwt_tokens.md
docs/rate_limit/: example.md  index.md  rate_limit_manager.md
docs/redis/: index.md
docs/session/: callbacks-middleware.md  example.md  index.md  initialize.md  session-data.md
environment/: index.html
fastapi_framework/: __init__.py  config.py  database.py  in_memory_backend.py  jwt_auth.py  logger.py  modules.py  permissions.py  rate_limit.py  redis.py  session.py  settings.py
in_memory_backends/api/: index.html
in_memory_backends/api/delete_exists/: index.html
in_memory_backends/api/expires/: index.html
in_memory_backends/api/increase_decrease/: index.html
in_memory_backends/api/set_get/: index.html
in_memory_backends/api/sets/: index.html
in_memory_backends/in_memory_backend/: index.html
in_memory_backends/redis/: index.html
in_memory_backends/redis/connection/: index.html
jwt/: index.html
jwt/example/: index.html
jwt/jwt_tokens/: index.html
rate_limit/: index.html
rate_limit/example/: index.html
rate_limit/rate_limit_manager/: index.html
redis/: index.html
redis/connection/: index.html
search/: search_index.json
session/: index.html
session/callbacks-middleware/: index.html
session/example/: index.html
session/initialize/: index.html
session/session-data/: index.html
tests/: test_config.py  test_database.py  test_in_memory_backend.py  test_jwt_auth.py  test_logger.py  test_modules.py  test_rate_limit.py  test_redis.py  test_session.py  test_settings.py
