[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "fastapi-framework"
module = "fastapi_framework"
author = "Tert0"
home-page = "https://github.com/Tert0/fastapi-framework"
classifiers = [ "License :: OSI Approved :: MIT License", "Framework :: AsyncIO", "Intended Audience :: Developers", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: Implementation :: CPython", "Topic :: Database", "Topic :: Software Development :: Libraries", "Topic :: Software Development :: Libraries :: Python Modules", "Typing :: Typed"]
description-file = "README.md"
requires = [
    "fastapi==0.67.0",
    "aioredis==1.3.1",
    "passlib==1.7.4",
    "PyJWT==2.1.0",
    "python-dotenv==0.19.0",
    "SQLAlchemy==1.4.22",
    "uvicorn==0.14.0"
]

[tool.flit.metadata.requires-extra]
test = [
    "httpx",
    "coverage"
]
doc = ["mkdocs-material"]
lint = [
    "black",
    "flake8",
    "mypy"
]

[tool.flit.metadata.urls]
Documentation = "https://tert0.github.io/fastapi-framework/"
