[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi-framework"
authors = [
    {name = "Tert0"}
]
readme = "README.md"
classifiers = [ "License :: OSI Approved :: MIT License", "Framework :: AsyncIO", "Intended Audience :: Developers", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: Implementation :: CPython", "Topic :: Database", "Topic :: Software Development :: Libraries", "Topic :: Software Development :: Libraries :: Python Modules", "Typing :: Typed"]
requires-python = ">=3.6"
dynamic = ["version", "description"]

dependencies = [
    "fastapi==0.98.0",
    "aioredis==1.3.1",
    "passlib==1.7.4",
    "PyJWT==2.7.0",
    "python-dotenv==1.0.0",
    "SQLAlchemy==2.0.17",
    "pyyaml==6.0",
    "toml==0.10.2",
    "pydantic==1.10.9"
]

[project.urls]
Documentation = "https://tert0.github.io/fastapi-framework"
Source = "https://github.com/Tert0/fastapi-framework"

[project.optional-dependencies]
test = [
    "httpx",
    "coverage",
    "aiosqlite"
]
doc = [
    "mkdocs-material"
]
lint = [
    "black",
    "flake8",
    "mypy",
    "types-PyYAML",
    "types-toml"
]